# Shogimon

./: .gitignore  README.md  list tuple parsing.py
lec_15_resource/: l15_model.py  l15_project_types.py
project-server/: README.md  main.go
purescript/: .gitignore  README.md  spago.dhall  spago.yaml
purescript/src/: Config.purs  Main.purs  Movements.purs  PieceFunctions.purs  ProjectTypes.purs
purescript/src/CS150241Project/: GameEngine.purs  Graphics.purs  Networking.purs
purescript/web/: index.html  index.js
pygame/: view.py
python_client/: README.md  pyproject.toml  pyrightconfig.json
python_client/src/: controller.py  main.py  model.py  online_controller.py  online_main.py  online_model.py  online_view.py  project_types.py  test_view.py  view.py
python_client/tests/: view_tester.py
